// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userCohorts should create an appropriate action from input params 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": 300000,
    "key": "user/undefined/cohorts",
    "namespace": "default",
    "suffix": "USER_COHORTS",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/undefined/cohorts",
  },
  "type": "@@api-client/API_REQUEST/USER_COHORTS",
}
`;

exports[`userFeed should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": 60000,
    "key": "user/someone/feed",
    "namespace": "default",
    "suffix": "USER_FEED",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/someone/feed",
  },
  "type": "@@api-client/API_REQUEST/USER_FEED",
}
`;

exports[`userProfile should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": 300000,
    "key": "user/someone/profile",
    "namespace": "default",
    "suffix": "USER_PROFILE",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/someone/profile",
  },
  "type": "@@api-client/API_REQUEST/USER_PROFILE",
}
`;
